[gd_scene load_steps=12 format=2]

[ext_resource path="res://Art/Strip/pixil-frame-0(16).png" type="Texture" id=1]
[ext_resource path="res://Scenes/Score.tscn" type="PackedScene" id=2]
[ext_resource path="res://Script/OutOfBox.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Countdown.tscn" type="PackedScene" id=4]
[ext_resource path="res://Art/Strip/pixil-frame-0(13).png" type="Texture" id=5]
[ext_resource path="res://Art/Strip/pixil-frame-0(15).png" type="Texture" id=6]
[ext_resource path="res://Art/Strip/pixil-frame-0(31).png" type="Texture" id=7]
[ext_resource path="res://Art/Strip/pixil-frame-0(32).png" type="Texture" id=8]
[ext_resource path="res://Script/LightScore.gd" type="Script" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1930.27, 745.879 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 23, 443.688 )

[node name="Strip" type="Node2D"]
pause_mode = 2
script = ExtResource( 9 )

[node name="FencingStrip" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="GroundCollision" type="CollisionShape2D" parent="FencingStrip"]
visible = false
position = Vector2( 961.749, 966 )
scale = Vector2( 0.499023, 0.0791016 )
shape = SubResource( 1 )

[node name="RoofCollision" type="CollisionShape2D" parent="FencingStrip"]
visible = false
position = Vector2( 964, -68 )
scale = Vector2( 0.499023, 0.0791016 )
shape = SubResource( 1 )

[node name="WallLeftCollision" type="CollisionShape2D" parent="FencingStrip"]
visible = false
position = Vector2( -125, 443 )
rotation = 1.5708
scale = Vector2( 0.499023, 0.0791016 )
shape = SubResource( 1 )

[node name="WallRightCollision" type="CollisionShape2D" parent="FencingStrip"]
visible = false
position = Vector2( 2050, 453 )
rotation = 1.5708
scale = Vector2( 0.499023, 0.0791016 )
shape = SubResource( 1 )

[node name="Pixil-frame-0(13)" type="Sprite" parent="FencingStrip"]
position = Vector2( 966, 937 )
scale = Vector2( 60.625, 5.5 )
texture = ExtResource( 5 )

[node name="LeftGreenLight" type="Sprite" parent="FencingStrip"]
visible = false
position = Vector2( 453, 948.5 )
scale = Vector2( 105.6, 19.5714 )
texture = ExtResource( 7 )

[node name="LeftRedLight" type="Sprite" parent="FencingStrip"]
visible = false
position = Vector2( 456, 948.5 )
scale = Vector2( 106.8, 19.5714 )
texture = ExtResource( 8 )

[node name="RightRedLight" type="Sprite" parent="FencingStrip"]
visible = false
position = Vector2( 1476, 950 )
scale = Vector2( 104.4, 19.1429 )
texture = ExtResource( 8 )

[node name="RightGreenLight" type="Sprite" parent="FencingStrip"]
visible = false
position = Vector2( 1472, 950 )
scale = Vector2( 102.8, 19.1429 )
texture = ExtResource( 7 )

[node name="Pixil-frame-0(16)5" type="Sprite" parent="FencingStrip"]
position = Vector2( 1745, 946 )
scale = Vector2( 1, 4.5625 )
texture = ExtResource( 1 )

[node name="Pixil-frame-0(16)4" type="Sprite" parent="FencingStrip"]
position = Vector2( 176, 952 )
scale = Vector2( 1, 4.5625 )
texture = ExtResource( 1 )

[node name="Pixil-frame-0(16)3" type="Sprite" parent="FencingStrip"]
position = Vector2( 966, 1022.5 )
scale = Vector2( 60.8125, 0.34375 )
texture = ExtResource( 1 )

[node name="Pixil-frame-0(16)2" type="Sprite" parent="FencingStrip"]
position = Vector2( 966, 868 )
scale = Vector2( 60.625, 1 )
texture = ExtResource( 1 )

[node name="Pixil-frame-0(15)" type="Sprite" parent="FencingStrip"]
position = Vector2( 967, 822 )
scale = Vector2( 60.6563, 2.0625 )
texture = ExtResource( 6 )

[node name="Pixil-frame-0(16)" type="Sprite" parent="."]
position = Vector2( 959.5, 942 )
scale = Vector2( 15.9687, 5.3125 )
texture = ExtResource( 1 )

[node name="Score_UI" parent="." instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 860.0
margin_top = 942.0
margin_right = 860.0
margin_bottom = 942.0

[node name="OutOfBoxLeft" type="Area2D" parent="."]
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBoxLeft"]
position = Vector2( -31, 458 )
shape = SubResource( 2 )

[node name="OutOfBoxRight" type="Area2D" parent="."]
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutOfBoxRight"]
position = Vector2( 1953, 453.688 )
shape = SubResource( 2 )

[node name="Countdown" parent="." instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 844.0
margin_top = 876.0
margin_right = 844.0
margin_bottom = 876.0

[node name="TimerLabel" parent="Countdown" index="0"]
margin_left = 53.0
margin_top = -554.0
margin_right = 93.0
margin_bottom = -540.0

[connection signal="body_entered" from="OutOfBoxLeft" to="OutOfBoxLeft" method="_on_OutOfBoxLeft_body_entered"]
[connection signal="body_entered" from="OutOfBoxRight" to="OutOfBoxLeft" method="_on_OutOfBoxRight_body_entered"]

[editable path="Countdown"]
